@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-07-22T08:12:56Z",
-  "count_outdated" : 144,
-  "uniques_outdated" : 119,
+  "timestamp" : "2023-07-24T01:06:02Z",
+  "count_outdated" : 146,
+  "uniques_outdated" : 121,
   "count" : 154,
   "uniques" : 129,
   "clones" : [
-    {
-      "timestamp": "2023-07-09T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 2,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 0, 2 ]
-    },
     {
       "timestamp": "2023-07-10T00:00:00Z",
       "count": 1,
