@@ -1,12 +1,7 @@
 {
-  "count": 10,
-  "uniques": 5,
+  "count": 8,
+  "uniques": 4,
   "clones": [
-    {
-      "timestamp": "2023-07-09T00:00:00Z",
-      "count": 2,
-      "uniques": 2
-    },
     {
       "timestamp": "2023-07-10T00:00:00Z",
       "count": 1,
